<resources>
    <string name="app_name">BMSS App</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_register">Don\'t have an account? Register</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="i_have_account_login">I have account ? Login</string>

    <string name="nameIsRequired">Username is required !</string>
    <string name="emailIsRequired">Email is required !</string>
    <string name="please_enter_valid_email">Please enter valid email !</string>
    <string name="passwordIsRequired">Password is  required !</string>
    <string name="minimumLength">Minimum Password Length 8</string>
    <string name="age_is_required">Age is required !</string>
    <string name="salary_is_required">Salary is required !</string>
    <string name="additional_income_is_required">Additional Income is required !</string>

    <string name="AlreadyRegistered">This account is already registered</string>
    <string name="noConnection">No Connection</string>
    <string name="successRegistered">Successfully Registered</string>
    <string name="successLogin">Successfully Login</string>
    <string name="userNotFound">This user not found !!!</string>
    <string name="passwordIncorrect">Password incorrect !!!</string>
    <string name="age">Age</string>
    <string name="forget_password">Forget Password</string>
    <string name="salary">Salary</string>
    <string name="do_you_have_additional_income">Do you have additional income?</string>
    <string name="home">Home</string>
    <string name="planning">Planning</string>
    <string name="goals">Goals</string>
    <string name="history">History</string>
    <string name="credit_card">Credit Card</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="number_of_plans">Number of Plans</string>
    <string name="pay">Pay</string>
    <string name="save">Save</string>
    <string name="update_password">Update Password</string>
    <string name="add_new_debit">Add New Debit</string>
    <string name="creditor">Creditor</string>
    <string name="purpose">Purpose</string>
    <string name="paid">Paid</string>
    <string name="total">Total</string>
    <string name="add_new_goal">Add New Goal</string>
    <string name="name_goal">Name Goal</string>
    <string name="target">Target</string>
    <string name="saving_goal">Saving Goal</string>
    <string name="contact_us">Contact Us</string>
    <string name="plan">plan</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="recover">Recover</string>
    <string name="no_planning">No Planning</string>
    <string name="circle_chart">Circle Chart</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="create">Create</string>
    <string name="setup">Setup</string>
    <string name="consumption_plan">Consumption Plan</string>
    <string name="_00_00">00/00</string>
    <string name="food">Food</string>
    <string name="transportation">Transportation</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="invoices">Invoices</string>
    <string name="others">Others</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="debits">Debits</string>
    <string name="card_holder_name_is_required">Card holder name is required</string>
    <string name="card_number_is_required">Card number is required</string>
    <string name="expiration_month_is_required">Expiration month is required</string>
    <string name="expiration_year_is_required">Expiration year is required</string>
    <string name="cvv_is_required">CVV is required</string>
    <string name="number_of_plan_must_be_required">Number Of Plan must be Required</string>
    <string name="successful">Successful</string>
    <string name="profile">Profile</string>
    <string name="password_not_match">Password Not Match</string>
    <string name="password_is_wrong">Password Is Wrong</string>
    <string name="update_successfully">Update Successfully</string>
    <string name="are_your_sure_delete">Are Your Sure Delete ?</string>
    <string name="delete">Delete</string>
    <string name="update_debit">Update Debit</string>
    <string name="creditor_name_is_required">Creditor Name Is Required</string>
    <string name="purpose_is_required">Purpose Is Required</string>
    <string name="total_is_required">Total Is Required</string>
    <string name="save_debit_successfully">Save Debit Successfully</string>
    <string name="update_goal">Update Goal</string>
    <string name="saving">Saving</string>
    <string name="sorry_you_exceeded_salary">Sorry!, You Exceeded Salary.</string>
    <string name="sorry_you_haven_t_free_plans">Sorry!, You Haven\'t Free Plans.</string>
    <string name="you_will_save">"You will save "</string>
    <string name="plan_created_successfully">Plan Created Successfully !</string>
    <string name="there_is_another_plan_in_current_month">There is another plan in current month !</string>
    <string name="save_plan_successfully">Save Plan Successfully !</string>
    <string name="no_plan_for_current_month">No Plan For Current Month</string>
    <string name="warning_home">Warning Home</string>
    <string name="home_exceeded_daily_consumption">Home Exceeded Daily Consumption</string>
    <string name="warning_food">Warning Food</string>
    <string name="food_exceeded_daily_consumption">Food Exceeded Daily Consumption</string>
    <string name="warning_transportation">Warning Transportation</string>
    <string name="transportation_exceeded_daily_consumption">Transportation Exceeded Daily Consumption</string>
    <string name="warning_education">Warning Education</string>
    <string name="education_exceeded_daily_consumption">Education Exceeded Daily Consumption</string>
    <string name="entertainment_exceeded_daily_consumption">Entertainment Exceeded Daily Consumption</string>
    <string name="warning_entertainment">Warning Entertainment</string>
    <string name="health_exceeded_daily_consumption">Health Exceeded Daily Consumption</string>
    <string name="warning_health">Warning Health</string>
    <string name="warning_invoices">Warning Invoices</string>
    <string name="invoices_exceeded_daily_consumption">Invoices Exceeded Daily Consumption</string>
    <string name="others_exceeded_daily_consumption">Others Exceeded Daily Consumption</string>
    <string name="warning_others">Warning Others</string>
    <string name="check_your_email">"Check Your Email : "</string>
    <string name="falid">Falid …</string>
    <string name="main">Home</string>
    <string name="save_goal_successfully">Save Goal Successfully</string>
    <string name="goal_name_is_required">Goal Name Is Required</string>
    <string name="goal_target_is_required">Goal Target Is Required</string>
    <string name="common_question">Common Question</string>
    <string name="congratulations_you_have_achieved_your_goal">Congratulations you have achieved your goal </string>
    <string name="congratulations_you_have_paid_off_your_debt">Congratulations you have paid off your debt </string>
    <string name="you_are_saving">You are saving</string>
    <string name="you_do_not_have_this_amount">You do not have this amount?</string>
</resources>