<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="o">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:iconTint="@color/mainColor"
            android:title="@string/main" />

        <item
            android:id="@+id/nav_planning"
            android:icon="@drawable/money"
            android:iconTint="@color/mainColor"
            android:title="@string/planning" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:iconTint="@color/mainColor"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/goals"
            android:iconTint="@color/mainColor"
            android:title="@string/goals" />
        <item
            android:id="@+id/nav_debits"
            android:icon="@drawable/creditor"
            android:iconTint="@color/mainColor"
            android:title="@string/debits" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting"
            android:iconTint="@color/mainColor"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:iconTint="@color/mainColor"
            android:title="@string/logout" />
    </group>
</menu>